--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
 
 <head>
-  <link rel="shortcut icon" href="src/assets/yinyang.ico" type="image/x-icon">
-  <link rel="icon" href="src/assets/yinyang.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="src/assets/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="src/assets/favicon.ico" type="image/x-icon">
   <meta charset="utf-8">
-  <meta name="og:site_name" content="Touhou Character Sorting">
+  <meta name="og:site_name" content="Billie's Character Sort">
   <meta name="og:description" content="A simple website for sorting Touhou characters in a formatted list.">
   <meta name="og:image" content="https://i.imgur.com/IZzJMk6.jpg">
-  <title>Touhou Character Sorting</title>
+  <title>Billie's Character Sorter</title>
 
   <link rel="stylesheet" type="text/css" href="src/css/reset.css">
   <link rel="stylesheet" type="text/css" href="src/css/styles.css">
@@ -42,7 +42,7 @@
     <div class="sorter">
         <img src="src/assets/defaultL.jpg" class="left sort image">
 
-        <div class="starting start button">Touhou Project Character Sorter<br><br>Click to Start!</div>
+        <div class="starting start button">Billie's Character Sorter<br><br>Click to Start!</div>
         <div class="starting load button">Load <span></span></div>
 
         <div class="loading button"><div></div><span>Loading...</span></div>
