--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
 
     <div class="sorter">
-        <img src="src/assets/defaultL.jpg" class="left sort image">
+        <img src="src/assets/Left.png" class="left sort image">
 
         <div class="starting start button">Billie's Character Sorter<br><br>Click to Start!</div>
         <div class="starting load button">Load <span></span></div>
@@ -55,7 +55,7 @@
         <div class="finished getimg button">Generate Image</div>
         <div class="finished list button">Generate Text List</div>
 
-        <img src="src/assets/defaultR.jpg" class="right sort image">
+        <img src="src/assets/Right.png" class="right sort image">
 
         <div class="left sort text"><p></p></div>
         <div class="right sort text"><p></p></div>
