--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
   <script src="src/js/data.js"></script>
   <script src="src/js/data/2017-05-01.js"></script>
+  <script src="src/js/data/2018-02-20.js"></script>
   <script src="src/js/data/2024-04-14.js"></script>
 
   <script src="src/js/html2canvas.min.js"></script>
