--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" type="text/css" href="src/css/styles.css">
 
   <script src="src/js/data.js"></script>
+  <script src="src/js/data/2017-05-01.js"></script>
   <script src="src/js/data/2024-04-14.js"></script>
 
   <script src="src/js/html2canvas.min.js"></script>
